k8s/mediaserver/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: mediaserver
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
#      runtimeClassName: nvidia
      containers:
        - name: jellyfin
          image: ghcr.io/linuxserver/jellyfin:10.11.5
          resources:
            limits:
#              nvidia.com/gpu: "1"
              cpu: "2"
              # memory: "1536Mi"
            requests:
              cpu: "2"
              # memory: "1536Mi"
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /config/data
              name: data
            - mountPath: /config/cache
              name: cache
            - mountPath: /data/tvshows
              name: tv-shows
              readOnly: false
            - mountPath: /data/movies
              name: movies
              readOnly: false
            - mountPath: /data/music
              name: music
              readOnly: false
            - mountPath: /data/video
              name: videos
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-pvc-config
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-pvc-data
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-pvc-cache
        - name: tv-shows
          nfs:
            server: 192.168.100.160
            path: /tank-data/media/tv-shows
            readOnly: false
        - name: movies
          nfs:
            server: 192.168.100.160
            path: /tank-data/media/movies
            readOnly: false
        - name: music
          nfs:
            server: 192.168.100.160
            path: /tank-data/media/music
            readOnly: false
        - name: videos
          nfs:
            server: 192.168.100.160
            path: /tank-data/media/videos
            readOnly: false
