k8s/mediaserver/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: mediaserver
  # annotations:
  #   metallb.universe.tf/loadBalancerIPs: 192.168.100.234
spec:
  type: LoadBalancer
  selector:
    app: jellyfin
  ports:
    - port: 8096
