k8s/mediaserver/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: mediaserver
  annotations:
   cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  rules:
    - host: "jellyfin.enricoruggieri.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jellyfin-service
                port:
                  number: 8096
  tls:
  - hosts:
    - jellyfin.enricoruggieri.com
    secretName: jellyfin-cert-tls
